--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,8 @@
 django==1.11.1
+django-filter==1.0.4
+django-filters==0.2.1
 djangorestframework==3.6.3
-django_filters==0.2.1
 requests==2.17.3
 celery==4.0.2
 mysqlclient==1.3.10
+django_cors_headers==2.1.0
