--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,17 +2,80 @@ version: '3'
 services:
   db:
     image: mysql:5.7
+    restart: unless-stopped
     environment:
       MYSQL_ROOT_PASSWORD: root
       MYSQL_DATABASE: issue_parser
       MYSQL_USER: megastos
       MYSQL_PASSWORD: root
+
+  rabbit:
+    image: rabbitmq:3.7.5
+    restart: unless-stopped
+    environment:
+        RABBITMQ_DEFAULT_USER: admin
+        RABBITMQ_DEFAULT_PASS: mypass
+
+  celery-beat:
+    build: .
+    links:
+      - rabbit
+    environment:
+      RABBIT_USERNAME: "admin"
+      RABBIT_PASSWORD: "mypass"
+      RABBIT_HOST: "rabbit"
+      SECRET: "de()5w1g2y-*4417f2x@em@g5d)i0@ae7w7!ay4n1dn6&1_@ge"
+    command: celery beat -A issue_parser  -l warning
+    restart: unless-stopped
+
+  celery-worker:
+    build: .
+    links:
+      - rabbit
+    environment:
+      RABBIT_USERNAME: "admin"
+      RABBIT_PASSWORD: "mypass"
+      RABBIT_HOST: "rabbit"
+      DB_USER: "megastos"
+      DB_PASSWORD: "root"
+      DB_ENGINE: django.db.backends.mysql
+      DB_TABLE: issue_parser
+      DB_HOST: db
+      DB_PORT: 3306
+      SECRET: "de()5w1g2y-*4417f2x@em@g5d)i0@ae7w7!ay4n1dn6&1_@ge"
+    command: celery worker -A issue_parser -l warning
+    restart: unless-stopped
+
+  nginx:
+    image: nginx:1-alpine
+    ports:
+      - "8000:80"
+    volumes:
+      - static:/code/static:ro
+      - ./config/default.conf:/etc/nginx/conf.d/default.conf:ro
+      - ./config/nginx.conf:/etc/nginx/nginx.conf:ro
+    restart: unless-stopped
+    links:
+      - web:web
   web:
     build: .
-    command: python manage.py runserver 0.0.0.0:8000
-    ports:
-     - "8000:8000"
+    command: "sh -c ./docker-entrypoint.sh"
+    restart: unless-stopped
+    environment:
+      RABBIT_USERNAME: "admin"
+      RABBIT_PASSWORD: "mypass"
+      RABBIT_HOST: "rabbit"
+      DB_USER: "megastos"
+      DB_PASSWORD: "root"
+      DB_ENGINE: django.db.backends.mysql
+      DB_TABLE: issue_parser
+      DB_HOST: db
+      DB_PORT: 3306
+      SECRET: "de()5w1g2y-*4417f2x@em@g5d)i0@ae7w7!ay4n1dn6&1_@ge"
     volumes:
-     - .:/code
+      - static:/code/static
     links:
      - db:db
+
+volumes:
+    static:
