--- a/dev.docker-compose.yml
+++ b/dev.docker-compose.yml
@@ -2,18 +2,19 @@ version: '3'
 services:
   db:
     image: mysql:5.7
-    restart: unless-stopped
     environment:
       MYSQL_ROOT_PASSWORD: root
       MYSQL_DATABASE: issue_parser
       MYSQL_USER: megastos
       MYSQL_PASSWORD: root
+    ports:
+      - 3306:3306
     volumes:
       - ./config/init.sql:/docker-entrypoint-initdb.d/init.sql
 
+
   rabbit:
     image: rabbitmq:3.7.5
-    restart: unless-stopped
     environment:
         RABBITMQ_DEFAULT_USER: admin
         RABBITMQ_DEFAULT_PASS: mypass
@@ -23,18 +24,19 @@ services:
     links:
       - rabbit
     environment:
+      PYTHONUNBUFFERED: 1
       RABBIT_USERNAME: "admin"
       RABBIT_PASSWORD: "mypass"
       RABBIT_HOST: "rabbit"
       SECRET: "de()5w1g2y-*4417f2x@em@g5d)i0@ae7w7!ay4n1dn6&1_@ge"
     command: celery beat -A issue_parser  -l warning
-    restart: unless-stopped
 
   celery-worker:
     build: .
     links:
       - rabbit
     environment:
+      PYTHONUNBUFFERED: 1
       RABBIT_USERNAME: "admin"
       RABBIT_PASSWORD: "mypass"
       RABBIT_HOST: "rabbit"
@@ -46,7 +48,6 @@ services:
       DB_PORT: 3306
       SECRET: "de()5w1g2y-*4417f2x@em@g5d)i0@ae7w7!ay4n1dn6&1_@ge"
     command: celery worker -A issue_parser -l warning
-    restart: unless-stopped
 
   nginx:
     image: nginx:1-alpine
@@ -56,14 +57,14 @@ services:
       - static:/code/static:ro
       - ./config/default.conf:/etc/nginx/conf.d/default.conf:ro
       - ./config/nginx.conf:/etc/nginx/nginx.conf:ro
-    restart: unless-stopped
     links:
       - web:web
   web:
     build: .
-    command: "sh -c config/docker-entrypoint.sh"
-    restart: unless-stopped
+    command: "sh -c config/dev-docker-entrypoint.sh"
     environment:
+      PYTHONUNBUFFERED: 1
+      DEBUG: "True"
       RABBIT_USERNAME: "admin"
       RABBIT_PASSWORD: "mypass"
       RABBIT_HOST: "rabbit"
@@ -76,6 +77,7 @@ services:
       SECRET: "de()5w1g2y-*4417f2x@em@g5d)i0@ae7w7!ay4n1dn6&1_@ge"
     volumes:
       - static:/code/static
+      - .:/code/
     links:
      - db:db
 
