--- a/Gopkg.toml
+++ b/Gopkg.toml
@@ -39,7 +39,7 @@
 
 [[constraint]]
   name = "github.com/gobuffalo/pop"
-  version = "4.6.2"
+  version = "4.6.3"
 
 [[constraint]]
   name = "github.com/gobuffalo/suite"
@@ -69,10 +69,14 @@
   name = "github.com/rs/cors"
   version = "1.5.0"
 
+[[constraint]]
+  branch = "master"
+  name = "github.com/shurcooL/githubv4"
+
+[[constraint]]
+  branch = "master"
+  name = "golang.org/x/oauth2"
+
 [prune]
   go-tests = true
   unused-packages = true
-
-[[constraint]]
-  name = "github.com/qor/admin"
-  version = "1.0.0"
