--- a/Caddyfile
+++ b/Caddyfile
@@ -5,7 +5,7 @@ api.ossn.club {
     Access-Control-Allow-Origin  "https://fixme.ossn.club"
     Access-Control-Allow-Methods "GET, POST, OPTIONS, PUT, DELETE, HEAD"
     Access-Control-Allow-Credentials true
-    Access-Control-Allow-Headers "*"
+    Access-Control-Allow-Headers "X-Pagination, Authorization, Content-type"
     Access-Control-Expose-Headers "X-Pagination"
     -Server
   }
