--- a/dev.docker-compose.yml
+++ b/dev.docker-compose.yml
@@ -2,6 +2,7 @@ version: "3"
 services:
   db:
     image: postgres:10
+
     environment:
       POSTGRES_PASSWORD: PASSWORD
       POSTGRES_DB: fixme_backend_development
@@ -14,8 +15,10 @@ services:
       - ./:/go/src/github.com/ossn/fixme_backend/
     environment:
       DATABASE_URL: "postgres://USER:PASSWORD@db:5432/fixme_backend_development?sslmode=disable"
-      GITHUB_TOKEN: "ADD_A_TOKEN"
+      GITHUB_TOKEN: "GITHUB_TOKEN"
+      GITLAB_TOKEN: "GITLAB_TOKEN"
       JWT_SECRET: "ADD_A_JWT_SECRET"
+
     ports:
       - 3000:3000
     links:
