--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,27 +2,21 @@ version: "3"
 services:
   db:
     image: postgres:10
-    restart: unless-stopped
+
     environment:
       POSTGRES_PASSWORD: PASSWORD
       POSTGRES_DB: fixme_backend_production
       POSTGRES_USER: USER
-
-  caddy:
-    image: abiosoft/caddy
-    restart: unless-stopped
-    volumes:
-      - ./Caddyfile:/etc/Caddyfile:ro
-    ports:
-      - 80:80
-      - 443:443
-
   web:
     build: .
     restart: unless-stopped
     environment:
       DATABASE_URL: "postgres://USER:PASSWORD@db:5432/fixme_backend_production?sslmode=disable"
-      GITHUB_TOKEN: "ADD_A_TOKEN"
+      GITHUB_TOKEN: "GITHUB_TOKEN"
+      GITLAB_TOKEN: "GITLAB_TOKEN"
       JWT_SECRET: "ADD_A_JWT_SECRET"
+
+    ports:
+      - 3000:3000
     links:
       - db:db
