--- a/dev.docker-compose.yml
+++ b/dev.docker-compose.yml
@@ -2,7 +2,6 @@ version: "3"
 services:
   db:
     image: postgres:10
-
     environment:
       POSTGRES_PASSWORD: PASSWORD
       POSTGRES_DB: fixme_backend_development
@@ -15,10 +14,9 @@ services:
       - ./:/go/src/github.com/ossn/fixme_backend/
     environment:
       DATABASE_URL: "postgres://USER:PASSWORD@db:5432/fixme_backend_development?sslmode=disable"
-      GITHUB_TOKEN: "GITHUB_TOKEN"
-      GITLAB_TOKEN: "GITLAB_TOKEN"
+      GITHUB_TOKEN: "5aaaa0369e2219ea53680c4368fa8066716dd9ac"
+      GITLAB_TOKEN: "3pnz2a1NhP5txyXL9q1Q"
       JWT_SECRET: "ADD_A_JWT_SECRET"
-
     ports:
       - 3000:3000
     links:
