--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,8 +11,8 @@ services:
     restart: unless-stopped
     environment:
       DATABASE_URL: "postgres://USER:PASSWORD@db:5432/fixme_backend_production?sslmode=disable"
-      GITHUB_TOKEN: "698ce2d4343b5a4db8dd443817d68b10287b8bd6"
-      GITLAB_TOKEN: "x7P_6CZ3zXP9zW741iQx"
+      GITHUB_TOKEN: "GITHUB_TOKEN"
+      GITLAB_TOKEN: "GITLAB_TOKEN"
       JWT_SECRET: "ADD_A_JWT_SECRET"
     ports:
       - 3000:3000
